@@ -1,7 +1,7 @@
-0e55a49b1a3658dd350688a6b7ccb8b5 *DESCRIPTION
+45859b7a3c3960e22b4ccda05ef78125 *DESCRIPTION
 c5e04c3d6a48e5e5f123d0436014acd0 *NAMESPACE
 79f8c199a8e695c7dd2abbf5cd97bd5a *R/g.abr.day.names.R
-221748d70a37e8e9be83ae7caadffc5c *R/g.analyse.R
+19a06a679c632a4ece23b8e2a67707af *R/g.analyse.R
 19f994083880cfd32d7c2919badcd666 *R/g.binread.R
 ae0b6ed10ee3861471dfd015a2753f28 *R/g.calibrate.R
 3b1f7a8ee4dfcfb9554f025cd12020fb *R/g.create.sp.mat.R
@@ -11,36 +11,36 @@ f8baba3222c45682063456245cef7317 *R/g.detecmidnight.R
 056ec9455889a740a41c66cfacdc3ef1 *R/g.downsample.R
 c1943f28a5f709b3d7e9cb87583e46e8 *R/g.extractheadervars.R
 b1de7cd3bfe9802f136b6fb3fdb498cc *R/g.getM5L5.R
-80427c124ba9afdfe2ee0de2c2291e61 *R/g.getbout.R
-bc0355f740878d776f7ff7b1cae54ad4 *R/g.getmeta.R
+5d73a916cc3248f5b39746e9b223330e *R/g.getbout.R
+3913c3f91edd06d3197dc7303ca70686 *R/g.getmeta.R
 761ef06997fbf94fc54f95622a91c858 *R/g.impute.R
-bb38ec54003f8d3aa47d4119502a7f53 *R/g.inspectfile.R
+fd8709086b27c8861f717c5f466e24e4 *R/g.inspectfile.R
 546a08d9520430e4965e59dfbbe2b578 *R/g.loadlog.R
 11d84e15c859c6086c29911e90d0ba7d *R/g.metric.R
 2bfdd3836d404b34c23186ad78a155ca *R/g.part1.R
-62d9794e08ca215f08737397d048eab0 *R/g.part2.R
+c1cb7675f8ffe66af9d1c218d8f22f57 *R/g.part2.R
 276981ffd8fd208cefe8301b630020ca *R/g.part3.R
 4c711c97f5538ea350da3db178374222 *R/g.part4.R
 d93d51f7aff249f807c96fc1cb1ed24b *R/g.plot.R
 cfeb103a4a7941b22e7ef5c68597bd50 *R/g.plot5.R
 8933c77e202412c0789a5ae55442f89e *R/g.report.part2.R
 2ef62fc57c994bafb19fdfc7ed101314 *R/g.report.part4.R
-03a8ec614a57b122ca5882a496f679f9 *R/g.shell.GGIR.R
+2ba5f32d7612720678b8ff911db66d8d *R/g.shell.GGIR.R
 d90c33c8b1fd40f39c7c40b3c5a5a285 *R/g.sib.det.R
 12ed79609defc93472e9a670db05cfbf *R/g.sib.plot.R
 1c00579da48f7003cdaa7595742f9241 *R/g.sib.sum.R
-51fbbeacdb5ba26618e775360e631027 *R/g.wavread.R
+71412b94378e9f67eb3aa721ede7a259 *R/g.wavread.R
 c465d73a6a2d6510c97f069906ba47b8 *R/g.weardec.R
 122d40c84ba0190dfff1b717e537cf44 *data/data.calibrate.RData
 5e07c17c608dee884ea2ad0a1bfa159f *data/data.getmeta.RData
 0cb14c60e18f5bd4c15fb942c95aea2b *data/data.inspectfile.RData
 2ef488d8543e33e67645f5c0deb94040 *data/datalist
-338654a813e12e00ce08c998cea491e1 *inst/NEWS.Rd
-b62ad0965721ed1829b8398901dad79a *man/GGIR-package.Rd
+73c2430dffbafb4f153e566c7bc2a702 *inst/NEWS.Rd
+3998aee4ea8b5b948602463ec77d0828 *man/GGIR-package.Rd
 df7d0b5c90d4ad2909e3196064e23f30 *man/data.calibrate.Rd
 4c1353b061014b508c6ed057c3068699 *man/data.getmeta.Rd
 732e7f4d54ba71967c25ba6545b55e07 *man/data.inspectfile.Rd
-32beb12dbbfca124009f34abe17fa7e3 *man/g.analyse.Rd
+39940a7f6115fe011cf385e133da1966 *man/g.analyse.Rd
 96c97821633c3bfcaa1f81fb58c30e06 *man/g.binread.Rd
 90763ece9ebf0099de2b49953eb27e2f *man/g.calibrate.Rd
 32ce38896f24a8a99ec2ba024d6802fe *man/g.getmeta.Rd
