@@ -71,8 +71,8 @@ journal/conference publications.
 \tabular{ll}{
 Package: \tab GGIR\cr
 Type: \tab Package\cr
-Version: \tab 1.2-7\cr
-Date: \tab 2016-5-13\cr
+Version: \tab 1.2-8\cr
+Date: \tab 2016-5-24\cr
 License: \tab LGPL (>= 2.0, < 3)\cr
 Discussion group: \tab https://groups.google.com/forum/#!forum/rpackageggir\cr
 }
